# dropgrad

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: analysis.md  windows_cuda_setup.md
dropgrad/: __init__.py  dropgrad_opt.py  dropgrad_scheduler.py
examples/: basic_usage.py  full_update_drop.py  lr_scheduler_integration.py
examples/vit_experiments/: benchmark_visualizations.py  mathematical_analysis.py  train.py  visualize.py  vit_model.py
tests/: test_dropgrad.py  test_dropgrad_optimizer.py  test_dropgrad_scheduler.py
