[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropgrad_dingo_actual"
version = "0.2.0"
dependencies = ["torch"]
authors = [
    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
    {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
]
maintainers = [
    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
    {name = "Mudit Bhargava", email = "muditbhargava666@gmail.com"}
]
description = "A PyTorch implementation of DropGrad regularization."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["neural networks", "machine learning", "pytorch"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/dingo-actual/dropgrad"
Homepage = "https://github.com/dingo-actual/dropgrad"
Issues = "https://github.com/dingo-actual/dropgrad/issues"